Fix background image on mobile

--- a/app/static/mystyle.css
+++ b/app/static/mystyle.css
@@ -15,13 +15,12 @@
 body#bg {
     width: 100%;
     margin: 0;
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/background_optimized.jpg") no-repeat 50% 50% fixed;
     transition: width 0.5s ease, margin-left .5s;
     -moz-transition: width 0.5s ease, margin-left .5s;
     -webkit-transition: width 0.5s ease, margin-left .5s;
     background-color: black;
-    will-change: width, margin-right;
-}
+    will-change: transform, width, margin-right;
+} 
 
 body#bg:before {
     content: "";
@@ -32,6 +31,7 @@ body#bg:before {
     width: 100%;
     height: 100%;
     z-index: -10;
+    background-color: black;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/background_optimized.jpg") no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -173,7 +173,7 @@ a.current {
   */
 
 @media (min-width: 481px) and (max-width: 767px) {
-    body#bg:before {
+    body#bg {
         background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/hero768.jpg") no-repeat 50% 50% fixed;
         background-color: black;
     }
@@ -203,7 +203,7 @@ a.current {
   */
 
 @media (min-width: 320px) and (max-width: 480px) {
-    body#bg:before {
+    body#bg {
         background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/static/hero480.jpg") no-repeat 50% 50% fixed;
         background-color: black;
     }
